tooling/nargo_cli/tests/snapshots/execution_success/regression_8975/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() -> pub bool {
    // Safety: comment added by `nargo expand`
    unsafe { func_1() };
    true
}

unconstrained fn func_1() {
    func_2([&mut true])
}

unconstrained fn func_2(mut b: [&mut bool; 1]) {
    b[0] = &mut false;
    {
        let mut idx_c: u32 = 0;
        while *b[0] {
            if idx_c == 0 {
                break;
            }
        }
    };
}
