tooling/nargo_cli/tests/snapshots/execution_success/regression_8975/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
assertion_line: 512
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0]",
    "EXPR [ (1, _0) -1 ]"
  ],
  "debug_symbols": "tdLRCoMgFAbgd/G6i7KtZq8yRpidQhAV02BE7z6LbDXYjWNXevz9jgpOqIXG9TWXnRpQdZ9QY7gQvK+FYtRyJf3qNCcolLU1AH4JHXKvNDUgLaqkEyJBIxVu3TRoKtfRUuPTNEEgWz/6hh0XsMzm5K3T7zTLbhvO8nLn17PP/uhJHjyJ8fhCNo+vaYwvwv1xQX7zJY7xBAcf9/7d5+n5/IevKOPm88eN1HDaCNjKzkl2SO1ThyT8WG0Ug9YZWDqtme/9Ag==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
