tooling/nargo_cli/tests/snapshots/execution_success/regression_8975/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_8975] Circuit output: 1
